[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rsuanalyzer"
version = "0.1.0"
description = "Tools for analyzing RSU"
authors = ["Neji Craftsman"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.8.2"
numpy = "1.26.3"
pandas = "2.2.0"
pytest = "8.0.0"
scipy = "1.12.0"