[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rsuanalyzer"
version = "0.1.0"
description = "Tools for analyzing RSU"
authors = ["Neji Craftsman"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.8.2"
numpy = "1.26.3"
pandas = "2.2.0"
scipy = "1.12.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "8.0.0"
pytest-mock = "^3.12.0"
sphinx = "^7.2.6"
