[tool.poetry]
name = "rsu-project"
version = "0.1.0"
description = "Project on RSU analysis"
authors = ["Hiraoka Group, The University of Tokyo"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rsuanalyzer" },
]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
scipy = "^1.12.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pydata-sphinx-theme = "^0.15.2"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
